feat: add configuration validation scripts for Docker and GitHub Actions
- Updated healthcheck command in docker-compose.yaml to use Deno for health checks.
- Created validate-config.ts to validate Dockerfile, docker-compose.yaml, .env.example, .dockerignore, and README.md for correctness.
- Added validate-workflow-config.ts to validate GitHub Actions workflow configuration, including checks for required steps and environment variables.
- Enhanced validation logic for Dockerfile and docker-compose.yaml to include additional checks for security and best practices.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,7 +17,7 @@ services:
     #   - .env
     restart: always
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:${PORT:-8000}/health"]
+      test: ["CMD", "deno", "eval", "const port = Deno.env.get('PORT') || '8000'; fetch('http://localhost:' + port + '/health').then(res => res.ok ? 0 : 1).catch(() => 1)"]
       interval: 30s
       timeout: 10s
       retries: 3
